feat: add auth system
- login/password auth
- JWT access/refresh tokens
- store refresh tokens in DB
- user registration endpoint
- secure token handling, update unit test according security